[package]
name = "dig-urn-resolver"
version = "0.4.0"
edition = "2021"
rust-version = "1.75.0"
description = "Resolve a DIG URN to its data through the protocol (node-first ladder, verified + decrypted). Rust + wasm; first consumer: Sage wallet NFT images."
license = "GPL-2.0-only"
authors = ["DIG Network"]
repository = "https://github.com/DIG-Network/dig-urn-resolver"
readme = "README.md"
keywords = ["dig", "chia", "urn", "resolver", "wasm"]
categories = ["cryptography::cryptocurrencies", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# `native` — the default: a `reqwest` HTTP transport + a blocking convenience.
# `wasm`   — the wasm-bindgen surface + a browser-`fetch` transport (built by wasm-pack).
default = ["native"]
native = ["dep:reqwest", "dep:tokio", "dep:url"]
wasm = [
  "dep:wasm-bindgen",
  "dep:wasm-bindgen-futures",
  "dep:js-sys",
  "dep:web-sys",
  "dep:serde-wasm-bindgen",
]

[dependencies]
# The canonical `urn:dig:` scheme — parsing, canonicalization, and the
# content-key / retrieval-key derivation + the browser verification contract
# (`verify::{ContentCrypto, verify_and_decrypt}`). This is the single source of truth
# for URN addressing, replacing digstore-core's parallel parser; the resolver's
# wire/lookup key is `DigUrn::content_key()` (root-independent), NOT `retrieval_key()`.
dig-urn-protocol = "0.1"

# The read-crypto PRIMITIVES ONLY — the merkle `MerkleProof` codec + fold, `resource_leaf`,
# and the symmetric read-crypto (`derive_decryption_key` + `decrypt_chunk`). Reused
# byte-identically (never reimplemented) as the `ContentCrypto` backing for the
# `dig-urn-protocol` verification contract. `default-features = false` selects the pure
# `alloc` core (no `blst`/BLS, no `getrandom`) so the SAME crate compiles native AND wasm.
digstore-core = { version = "0.13.4", default-features = false }

async-trait = "0.1"
base64 = "0.22"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# native transport (feature `native`)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"], optional = true }
tokio = { version = "1", features = ["rt", "macros"], optional = true }
# WHATWG URL parser — the SAME crate reqwest dials with, so the ladder's host
# classification is byte-identical to the real connect target (no hand-rolled splitter).
url = { version = "2", optional = true }

# wasm transport + bindings (feature `wasm`)
wasm-bindgen = { version = "0.2", optional = true }
# Deserializes the `DigNetwork` options object (a typed JS object) into the Rust
# option fields, so the constructor takes named fields, not positional args.
serde-wasm-bindgen = { version = "0.6", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "WorkerGlobalScope",
  "Blob",
  "BlobPropertyBag",
  "Url",
] }

# Drives the wasm disk-cache test under `wasm-pack test --node` (feature `wasm`).
[dev-dependencies]
wasm-bindgen-test = "0.3"

# The native integration tests run on a multi-thread tokio runtime; tokio's full
# runtime is not wasm-compatible, so scope this dev-dep to non-wasm targets (the wasm
# tests use `wasm-bindgen-test`, above).
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
